# message-info-localizer

./: Cargo.toml
src/: main.rs
src/api/: deepl.rs  message.rs  mod.rs
